ci/springtest/text.yaml
#apiVersion: networking.k8s.io/v1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: dev6.neogiciel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-hello-svc
                port:
                  number: 8080
